--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "phpunit/phpunit": "^11.5.3",
+        "phpstan/phpstan": "^2.1",
+        "rector/rector": "^2.2"
     },
     "autoload": {
         "psr-4": {
